--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -31,9 +31,6 @@
   line-height: 40px;
   transition: background 0.15s linear;
 }
-.projRow:hover {
-//   background-color: ;
-}
 .fade {
   transition: 0.15s linear all;  
   transition-delay: 0.07s;
@@ -42,4 +39,63 @@
 
 .fade.ng-hide {
   opacity: 0;
+}
+.catspan {
+    border-width: 1px;
+    border-style: solid;
+    border-color: #b0bec5;
+    display: inline;
+    padding: 3px;
+    margin-right: 1px;
+    margin-bottom: 10px;
+}
+.bordered {
+    border-width:1px;
+    border-style:solid;
+    border-color:#c0cec5;
+    border-radius: 10px;
+    padding: 15px;
+}
+.chart-label {
+    font-size: 1vw;
+}
+
+
+
+.loadfade {
+
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
