--- a/css/style.css
+++ b/css/style.css
@@ -8975,8 +8975,7 @@ hr.transparent {
   border-color: #b0bec5;
   display: inline;
   padding: 3px;
-  margin-right: 1px;
-  margin-bottom: 10px; }
+  margin-right: 1px; }
 
 .bordered {
   border-width: 1px;
